--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
+  "editor.formatOnSave": true,
   "eslint.autoFixOnSave": true,
   "eslint.enable": true,
   "eslint.validate": [
